--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "dependencies": {
     "@babel/core": "^7.13.14",
-    "imagemin-webpack-plugin": "^2.4.2"
+    "imagemin-webpack-plugin": "^2.4.2",
+    "inputmask": "^5.0.5"
   }
 }
